2001-04-26  Chema Celorio  <chema@celorio.com>

	* Makefile.am (EXTRA_DIST): add print-conf.in to pass distcheck

2001-04-26  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
	* disks-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
	* memory-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
	Some indentation corrections.
	* print.pl.in: Escaped a couple of hashes that confused emacs.
	* print-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
	* users-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
	
2001-04-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* filesys.pl.in (xst_filesys_translate_ext2_device_to_label):
	chomp is the same in this case, and a common idiom. Also,
	always return $label, as "" eq undef.
	Some other style changes.
	(xst_filesys_table_merge_superset): merge stuff missing in
	first table from second one.
	(xst_filesys_table_merge_subset): delete stuff in first table
	missing	in second.
	(xst_filesys_table_to_hash): This made these two possible.
	(xst_filesys_hash_to_table): Don't you love Perl?
	(xst_filesys_info_merge): Merge stuff inside infos.
	(xst_filesys_info_merge_options): And options.
	(merge_hashes): Small utility that makes life more bearable.

2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* debug.pl.in: minor cosmetic change to path.
	* general.pl.in: require gettext.pl routines and set textdomain
	to "ximian-setup-tools".
	* gettext.pl.in: Removed function N_. This is only a C trick
	to fool the preprocessor. Oh, but this is not C.
	* report.pl.in: Surround strings to be translated by '_()'.
	
2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: init.d script for smb in Debian is samba.
	* service.pl.in (xst_service_sysv_get_paths): Added paths for
	  Debian and Mandrake.
	* time-conf.in: Check for service availability and activation.
	  Minor indentation fixes.
	